--- a/build.xml
+++ b/build.xml
@@ -295,7 +295,8 @@
 
 	<!-- Generates the native headers from source files -->
 	<target name="headers" description="invokes javah on java classes" depends="compile">
-		<javac nativeHeaderDir="${lwjgl.src.native}/linux" debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
+    <!--
+		<javac debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
 			<src path="${lwjgl.src}/java/"/>
 			<src path="${lwjgl.src}/generated/"/>
 			<include name="org/lwjgl/LinuxSysImplementati/n.java" />
@@ -319,7 +320,7 @@
 		<javac nativeHeaderDir="${lwjgl.src.native}/windows" debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
 			<src path="${lwjgl.src}/java/"/>
 			<src path="${lwjgl.src}/generated/"/>
-			<include name="org/lwjgl/WindowsSysImplementati/n.java"/>
+			<include name="org/lwjgl/WindowsSysImplementation.java"/>
 			<include name="org/lwjgl/opengl/WindowsKeyboard.java" />
 			<include name="org/lwjgl/opengl/WindowsRegistry.java" />
 			<include name="org/lwjgl/opengl/WindowsDisplay.java"/>
@@ -344,7 +345,7 @@
 		<javac nativeHeaderDir="${lwjgl.src.native}/macosx" debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
 			<src path="${lwjgl.src}/java/"/>
 			<src path="${lwjgl.src}/generated/"/>
-			<include name="org/lwjgl/MacOSXSysImplementati/n.java" />
+			<include name="org/lwjgl/MacOSXSysImplementation.java" />
 			<include name="org/lwjgl/opengl/MacOSXCanvasPeerInfo.java" />
 			<include name="org/lwjgl/opengl/MacOSXPeerInfo.java" />
 			<include name="org/lwjgl/opengl/MacOSXPbufferPeerInfo.java" />
@@ -359,14 +360,14 @@
 			<src path="${lwjgl.src}/java/"/>
 			<src path="${lwjgl.src}/generated/"/>
 			<include name="org/lwjgl/opengl/AWTSurfaceLock.java" />
-			<include name="org/lwjgl/DefaultSysImplementati/n.java" />
+			<include name="org/lwjgl/DefaultSysImplementation.java" />
 			<include name="org/lwjgl/input/Cursor.java" />
 			<include name="org/lwjgl/input/Keyboard.java" />
 			<include name="org/lwjgl/input/Mouse.java" />
 			<include name="org/lwjgl/openal/AL.java" />
 			<include name="org/lwjgl/opencl/CL.java" />
-            <include name="org/lwjgl/opencl/CallbackUtil.java" />
-            <include name="org/lwjgl/BufferUti/s.java" />
+      <include name="org/lwjgl/opencl/CallbackUtil.java" />
+      <include name="org/lwjgl/BufferUtils.java" />
 		</javac>
 
 		<javac nativeHeaderDir="${lwjgl.src.headers}/opengl" debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
@@ -389,6 +390,7 @@
 			<include name="org/lwjgl/opengles/GLContext.java"/>
 			<include name="org/lwjgl/opengles/CallbackUtil.java"/>
 		</javac>
+    -->
 	</target>
 
 	<target name="touch-version">
@@ -419,27 +421,29 @@
 				</tokenfilter>
 			</filterchain>
 		</loadfile>
-		<loadfile srcfile="${lwjgl.src.native}/windows/org_lwjgl_WindowsSysImplementation.h" property="lwjgl.native.windows.version">
+		<loadfile srcfile="${lwjgl.src.native}/includes/org_lwjgl_WindowsSysImplementation.h" property="lwjgl.native.windows.version">
 			<filterchain>
 				<tokenfilter>
 	    		<containsstring contains="#define org_lwjgl_WindowsSysImplementation_JNI_VERSION"/>
 				</tokenfilter>
 			</filterchain>
 		</loadfile>
-		<loadfile srcfile="${lwjgl.src.native}/linux/org_lwjgl_LinuxSysImplementation.h" property="lwjgl.native.linux.version">
+		<!--
+    <loadfile srcfile="${lwjgl.src.native}/includes/org_lwjgl_LinuxSysImplementation.h" property="lwjgl.native.linux.version">
 			<filterchain>
 				<tokenfilter>
 	    		<containsstring contains="#define org_lwjgl_LinuxSysImplementation_JNI_VERSION"/>
 				</tokenfilter>
 			</filterchain>
 		</loadfile>
-		<loadfile srcfile="${lwjgl.src.native}/macosx/org_lwjgl_MacOSXSysImplementation.h" property="lwjgl.native.macosx.version">
+		<loadfile srcfile="${lwjgl.src.native}/includes/org_lwjgl_MacOSXSysImplementation.h" property="lwjgl.native.macosx.version">
 			<filterchain>
 				<tokenfilter>
 	    		<containsstring contains="#define org_lwjgl_MacOSXSysImplementation_JNI_VERSION"/>
 				</tokenfilter>
 			</filterchain>
 		</loadfile>
+    -->
 		<echo>
 			lwjgl.java.windows.version = ${lwjgl.java.windows.version}
 			lwjgl.native.windows.version = ${lwjgl.native.windows.version}
@@ -480,6 +484,19 @@
 
 	<!-- Compiles the Java source code -->
 	<target name="compile" description="Compiles the java source code" depends="-initialize">
+		<javac debug="yes" nativeHeaderDir="${lwjgl.src.native}/includes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
+      <!--<compilerarg value="-Xlint:unchecked"/>-->
+			<src path="${lwjgl.src}/java/"/>
+			<src path="${lwjgl.src}/generated/"/>
+			<include name="org/lwjgl/*.java"/>
+			<include name="org/lwjgl/input/**"/>
+			<include name="org/lwjgl/opengl/**"/>
+			<include name="org/lwjgl/opengles/**"/>
+			<include name="org/lwjgl/openal/**"/>
+      <include name="org/lwjgl/opencl/**"/>
+			<include name="org/lwjgl/util/**"/>
+			<exclude name="org/lwjgl/util/generator/**"/>
+		</javac>
 		<javac debug="yes" destdir="${lwjgl.bin}" source="8" target="8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core">
             <!--<compilerarg value="-Xlint:unchecked"/>-->
 			<src path="${lwjgl.src}/java/"/>
